working on mobile issue

--- a/jguffey/pub/css/site.less
+++ b/jguffey/pub/css/site.less
@@ -24,6 +24,9 @@ html{
 			z-index: 3;
 		}
 		#container{
+			z-index: 2;
+			position: relative;
+			
 			header{
 				z-index: 1;
 				/*position: relative;*/
